syntax = "proto3";

package mughieams.evermosassessment.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/mughieams/evermos-assessment/protobuf/api;commerce_api";

service ProductService {
  rpc GetProducts(google.protobuf.Empty) returns (GetProductsResponse) {
    option (google.api.http) = {get: "/v1/products"};
  }
}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 quantity = 5;
  int64 shop_id = 6;
  int64 warehouse_id = 7;
}

message GetProductsResponse {
  repeated Product products = 1;
}
